# TestRepo

./: README.md  Testfile  VERSION  VLP16_points.launch  obstacle_avoidance.launch
robust_navigation/: CMakeLists.txt  package.xml
robust_navigation/cfg/: Gains.cfg
robust_navigation/include/robust_navigation/: Path_Controller.h  Planner.h  path_planning.h
robust_navigation/launch/: local_navigation_avoidance.launch  test_avoidance.launch
robust_navigation/src/: Elevation_Map.cpp  Goal_Publisher.cpp  Path_Controller.cpp  Path_Smoothing.cpp  Planner.cpp  path_planning.cpp
sensors_ws/devel/: .catkin  .rosinstall  setup.sh
sensors_ws/devel/include/amcl/: AMCLConfig.h
sensors_ws/devel/include/base_local_planner/: Position2DInt.h
sensors_ws/devel/include/costmap_2d/: InflationPluginConfig.h  ObstaclePluginConfig.h  VoxelGrid.h  VoxelPluginConfig.h
sensors_ws/devel/include/gap_finding_pkg/: Gap.h  GapArray.h
sensors_ws/devel/include/geobot_navigation/: GainsConfig.h  GapDirection.h  GetPlan.h  GetPlanRequest.h  GetPlanResponse.h  SetGoal.h  SetGoalAction.h  SetGoalActionFeedback.h  SetGoalActionGoal.h  SetGoalActionResult.h  SetGoalFeedback.h  SetGoalGoal.h  SetGoalRequest.h  SetGoalResponse.h  SetGoalResult.h
sensors_ws/devel/include/geobot_navigation_rupes/: Num.h  Path.h  PathRequest.h  PathResponse.h
sensors_ws/devel/include/geobot_pose_publisher/: GprTraceLocation.h
sensors_ws/devel/include/global_planner/: GlobalPlannerConfig.h
sensors_ws/devel/include/gpr_collect/: GprTrace.h
sensors_ws/devel/include/gpr_gps_converge/: GprConverged.h  GprTraceLocation.h
sensors_ws/devel/include/hector_mapping/: HectorDebugInfo.h  HectorIterData.h
sensors_ws/devel/include/move_base_msgs/: MoveBaseAction.h  MoveBaseActionFeedback.h  MoveBaseActionGoal.h  MoveBaseActionResult.h  MoveBaseFeedback.h  MoveBaseGoal.h  MoveBaseResult.h
sensors_ws/devel/include/os5000s_compass/: compass_heading.h
sensors_ws/devel/include/pointcloud_to_laserscan/: ObstacleProximity.h  Velocity_multiplier.h
sensors_ws/devel/include/ros2udp/: GprConverged.h  spi_array.h
sensors_ws/devel/include/velodyne_driver/: VelodyneNodeConfig.h
sensors_ws/devel/include/velodyne_msgs/: VelodynePacket.h  VelodyneScan.h
sensors_ws/devel/include/velodyne_pointcloud/: CloudNodeConfig.h  TransformNodeConfig.h
sensors_ws/devel/lib/amcl/: amcl
sensors_ws/devel/lib/base_local_planner/: point_grid
sensors_ws/devel/lib/convert_slam_pose/: convert_slam_pose_node
sensors_ws/husky-core.d/: .installed_files  VLP16_points.launch  base.launch  delayed_launch.launch  delayed_launch.launch.save  gps_rtk.launch  navsat.launch
sensors_ws/src/convert_slam_pose/: CMakeLists.txt  package.xml
sensors_ws/src/convert_slam_pose/src/: convert_slam_pose.cpp
sensors_ws/src/gap_finding_pkg/: CMakeLists.txt  package.xml
sensors_ws/src/geobot_global_planner/: CMakeLists.txt  geobot_global_planner_plugin.xml  package.xml
sensors_ws/src/geobot_global_planner/include/geobot_global_planner/: geobot_global_planner.h
sensors_ws/src/geobot_global_planner/src/: geobot_global_planner.cpp
sensors_ws/src/geobot_navigation/: CMakeLists.txt  CMakeLists.txt~  corners.txt  corners.txt~  obstacles.txt~  package.xml
sensors_ws/src/geobot_navigation_rupes/: CMakeLists.txt  local_planner_my.cpp  package.xml
sensors_ws/src/geobot_navigation_rupes/include/geobot_navigation_rupes/: local_planner.h  local_planner_2hz.h  local_planner_7dec.h
sensors_ws/src/geobot_navigation_rupes/launch/: gazebo_avoidance_simulate.launch  geobot_local_navigation_avoidance.launch  geobot_navigation_centering.launch  obstacle_avoidance.launch
sensors_ws/src/geobot_navigation_rupes/src/: global_planner_my.cpp  local_planner_my.cpp  local_planner_my_01_12.cpp  local_planner_my_2hz.cpp  local_planner_my_7dec.cpp  local_planner_my_avoidance.cpp  rupak@rupak
sensors_ws/src/geobot_navigation_rupes/srv/: Path.srv
sensors_ws/src/geobot_navigation_rupes/worlds/: csm_playpen.world  csm_playpen_rahul.world  small_mine.world
sensors_ws/src/geobot_pose_publisher/: CMakeLists.txt  package.xml
sensors_ws/src/gpr_collect/: CMakeLists.txt  package.xml
sensors_ws/src/gpr_gps_converge/: CMakeLists.txt
sensors_ws/src/gps_filter/: CMakeLists.txt  package.xml
sensors_ws/src/os5000s_compass/: CMakeLists.txt
sensors_ws/src/pointcloud_ring/: CMakeLists.txt  package.xml
sensors_ws/src/pointcloud_ring/include/pointcloud_ring/: point_cloud_conversion.h
sensors_ws/src/pointcloud_ring/launch/: pointcloud2ring_converter.launch
sensors_ws/src/pointcloud_ring/src/: converter_cloud2.cpp
sensors_ws/src/ros2udp/: CMakeLists.txt
sensors_ws/src/spidar/: CMakeLists.txt
(+394 files in other folders)
